calling products-service using feign client